<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_register">设置密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">手机号</string>
    <string name="title_activity_basic">广告投放</string>
    <string name="error_invalid_username">用户名格式错误</string>
    <string name="error_invalid_verifycode">验证码错误</string>
    <string name="error_inconsistent_password">密码不一致</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_register">注册账号</string>
    <string name="link_register_short">注册</string>
    <string name="link_forgetpwd_short">忘记密码</string>
    <string name="button_register">注册账号</string>
    <string name="prompt_verify">验证码</string>
    <string name="link_verify_short">获取</string>
    <string name="prompt_search">搜索</string>
    <string name="link_search_short">搜索</string>
    <string name="search_button">搜索</string>
    <string name="register_title">注册账号</string>
    <string name="find_password_title">找回密码</string>
    <string name="prompt_password_confirm">再确认密码</string>
    <string name="button_find_password">确认设置</string>
    <string name="loading">正在加载</string>
    <string name="loading_register">正在注册</string>
    <string name="loading_login">正在登录</string>
    <string name="bt_link_goto_main">先去逛逛</string>
    <string name="loading_find_password">正在找回密码</string>
    <string name="prompt_password_new">设置新密码</string>
    <string name="prompt_show_none">暂无节目</string>
    <string name="indicator_main">首页</string>
    <string name="indicator_type">分类</string>
    <string name="indicator_person">我的</string>
    <string name="link_type_more"><![CDATA[查看更多 >]]></string>
    <string name="more_show_title">分类</string>

</resources>
