<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.heavon.myapplication.MainActivity">

    <!--<RelativeLayout
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_search"
            android:inputType="text"
            android:selectAllOnFocus="false"
            android:textAlignment="center"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>-->

    <FrameLayout
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <fragment
            android:id="@+id/fragment_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.example.heavon.fragment.SearchFragment"
            tools:layout="@layout/fragment_search">

        </fragment>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_box"
        android:layout_below="@+id/search_box"
        android:layout_above="@+id/indicator_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/indicator_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/indicator_main"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/indicator_main" />

        <Button
            android:id="@+id/indicator_type"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/indicator_type" />

        <Button
            android:id="@+id/indicator_person"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/indicator_person" />
    </LinearLayout>
</RelativeLayout>
